[tool.poetry]
name = "pritunl-monitor"
version = "0.0.1"
description = "flask app to get pritunl prometheus metrics"
authors = ["Marcus Young <security@zapier.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<3.8"
Flask-PyMongo = "^2.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.3"
pylint = "^2.4"
pytest-cov = "^2.8"
coverage = "^5.0"
isort = "^4.3"
tox = "^3.14"
moto = "^1.3.14"

[tool.tox]
legacy_tox_ini = """

[tox]
isolated_build = True
envlist = py37
skipsdist = True
toxworkdir=.tox
usedevelop=True
setenv = PYTHONPATH = {toxinidir}

[testenv]
commands =
    isort -c -rc --skip app/main/__init__.py app -sp {toxinidir}
    pylint --rcfile {toxinidir}/.pylintrc -r n app
    py.test --cov-config .coveragerc --cov app --cov-report term-missing --cov-report xml --junitxml junit.xml tests {posargs}
whitelist_externals = make
                      bash
                      pylint
"""
